Kubernetes/KubernetesSamplePractice/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mynginx
  template:
    metadata:
      name: mynginx
      labels:
        app: mynginx
    spec:
      containers:
        - image: mynginx:1.0
          name: mynginx
