Kubernetes/KubernetesSamplePractice/tomcat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: tomcat
