Kubernetes/KubernetesSamplePractice/ingressController2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressController2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - host: demo.domain2.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific 
        backend:
          service:
            name: nginx-service
            port:
              number: 80
